[gd_scene load_steps=3 format=3 uid="uid://bun0dluw6vfvl"]

[ext_resource type="Script" path="res://UIObjects/InventoryUI/ShopMenuUI/ShopInventoryUI.gd" id="1_xi2it"]
[ext_resource type="PackedScene" uid="uid://ovqq5ehv3poq" path="res://UIObjects/InventoryUI/ShopMenuUI/ShopItemEntryButton.tscn" id="2_6k0pp"]

[node name="ShopInventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xi2it")
shop_item_entry_button_scene = ExtResource("2_6k0pp")

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3

[node name="ItemEntryContainer" type="GridContainer" parent="ShopPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
columns = 2
